# learning_lab

./: 1fundamentals.ipynb  1fundamentals_hw.ipynb  2workflow.ipynb  2workflow_hw.ipynb  3mcc.ipynb  3ms.ipynb  3nn_classification.ipynb  4cv.ipynb  4cv_hw.ipynb  5cd.ipynb  helper.py  inference_mode_comparison.csv  intern.ipynb  linear.ipynb  no_grad_vs_inference_mode.ipynb  practise.ipynb  pyproject.toml  quickstart.ipynb
models/: linear.pth  workflow.pth
practise/custom_datasets/: flowers.ipynb  fruits.ipynb
